--- a/Galeria/CSS/main.css
+++ b/Galeria/CSS/main.css
@@ -10,19 +10,19 @@ body {
     background-color: #014545;
     display: flex;
     flex-direction: column; 
-    justify-content: center; 
+    justify-content: flex-start; 
     align-items: center; 
-    height: 100vh; 
+    min-height: 100vh; 
     text-align: center;
-    gap: 30px;
+   margin-bottom: 50px;
     padding-top: 50px;
 }
-
 
 .header {
     color: white;
     font-size: 2rem;
     padding: 1rem 2rem;
+    margin-top: 20px;
     
    
 }
@@ -34,21 +34,22 @@ body {
 }
 
 .gallery {
-    flex-grow: 1;
+   margin-bottom: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Asegura que las imágenes estén centradas */
+    align-items: center;
     width: 90%;
-    max-width: 800px; 
+    max-width: 800px;
     background-color: black;
-    padding: 1rem;
+    padding: 0.8rem;
     border-radius: 10px;
-    align-items: center; 
-    margin: 0 auto; 
-    margin-bottom: 50px;
+   position: relative;
+
 }
 
 .gallery__list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columnas en pantallas grandes */
-    grid-template-rows: auto;
+    
     gap: 15px; /* Espacio entre imágenes */
     list-style: none;
     width: 100%;
@@ -58,6 +59,11 @@ body {
 .gallery__image {
     width: 100%;
     height: auto;
+}
+
+.spacer {
+    flex-grow: 1; /* Este div ocupará el espacio sobrante */
+    margin-top: 20px;
 }
 
 
@@ -75,9 +81,7 @@ body {
         margin-bottom: 10px; 
     }
 
-    .gallery__list {
-        grid-template-columns: 1fr; 
-    }
+   
 
     .gallery {
         width: 95%; /* Reducir el ancho para que no se desborde */
@@ -107,11 +111,54 @@ body {
         align-items: center;
         justify-content: center;
         width: 90%;
-        max-width: 800px;
+        max-width: 900px;
         margin: auto; /* Centra correctamente */
     }
 }
 
+.gallery .gallery__list img{
+    width: 100%;
+}
 
 
+.gallery .gallery_photoitem{
+    display: none;
+ }
+ 
+ .gallery .spotlight{
+    display: block;
+ }
+
+ .gallery .gallery__controls{
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 4%;
+   right: 4%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+ }
+
+.btn{
+  color: #114e07;
+  background-color: #bcd1c5;
+  border: 4px solid rgb(43, 48, 43);
+  border-radius: 10px;
+  padding: 8px 15px;
+  display: inline-block;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 20px;
+  
+  letter-spacing: 1px;
+  cursor: pointer;
+ 
+  -webkit-transition: ease-out 0.8s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+.slide_left:hover {
+    box-shadow: inset 0 0 0 50px #60a97f;
+  }
 
