--- a/Galeria/CSS/main.css
+++ b/Galeria/CSS/main.css
@@ -129,7 +129,7 @@ body {
     display: block;
  }
 
- .gallery .gallery__controls{
+ .gallery .gallery__controls {
    position: absolute;
    top: 0;
    bottom: 0;
@@ -138,6 +138,7 @@ body {
    display: flex;
    justify-content: space-between;
    align-items: center;
+
  }
 
 .btn{
@@ -156,9 +157,13 @@ body {
   -webkit-transition: ease-out 0.8s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
+
 }
 
 .slide_left:hover {
     box-shadow: inset 0 0 0 50px #60a97f;
   }
 
+  .gallery .gallery__controls .btn:disabled{
+    opacity: 0;
+  }
