--- a/docs/CSS/main.css
+++ b/docs/CSS/main.css
@@ -6,20 +6,25 @@
 }
 
 body {
-    background-color: #014545;
+    background-color:  #1e1e1e;
     display: flex;
     flex-direction: column; 
     justify-content: flex-start; 
     align-items: center; 
     min-height: 100vh; 
     text-align: center;
+
+          /* Oculta el scroll vertical */
+    text-align: center;
+    padding-top: 5px;          /* Reducido */
    }
 
 .header {
     color: white;
-    font-size: 2.5rem;
-    padding: 1rem 2rem;
-    margin-top: 10px;
+    font-size: 1.5rem;        
+    padding: 0.5px;  
+    margin-top: 10px;          
+    margin-bottom: 10px;
 }
 
 .header .header__title {
@@ -29,34 +34,40 @@ body {
 }
 
 .gallery {
-    margin-bottom: auto;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;
-    width: 100%;
-    max-width: 900px;
+    width: 90%;
+    max-width: 1000px; /* Limita el ancho máximo de la galería */
     background-color: black;
-    padding: 0.8rem;
+    padding: 10px; /* Agrega un relleno a la galería para dejar espacio alrededor */
     border-radius: 10px;
     position: relative;
-    overflow: hidden; 
+    overflow: hidden;
+    max-height: 80vh; 
     }
+
+    
 
 .gallery__list {
     
     gap: 10px; 
     list-style: none;
-    width: 100%;
+    width: 80%;
     padding: 0;
     display: flex;
+    justify-content: center;
 }
+
+
+
 
 .gallery__image {
     width: 100%; 
-    height: auto; 
-    max-width: 100%; 
-    margin: 0 auto; 
+    max-height: 800px; 
+    object-fit: cover; /* Esto asegurará que las imágenes cubran el espacio sin deformarse */
     border-radius: 10px;
 }
 
@@ -112,9 +123,9 @@ body {
  }
 
 .btn{
-  color: #114e07;
-  background-color: #bcd1c5;
-  border: 4px solid rgb(43, 48, 43);
+    color: #1e1e1e;
+    background-color: #eaeaea;
+    border: 2px solid #9b9a9a;
   border-radius: 10px;
   padding: 8px 15px;
   display: inline-block;
@@ -130,7 +141,7 @@ body {
   }
 
 .slide_left:hover {
-    box-shadow: inset 0 0 0 50px #60a97f;
+    box-shadow: inset 0 0 0 50px #b9b9b9;
   }
 
   .gallery .gallery__controls .btn:disabled{
